Fix .dropdown-item's to wrap to match spec

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -140,7 +140,6 @@
   color: $dropdown-link-color;
   text-align: inherit; // For `<button>`s
   text-decoration: if($link-decoration == none, null, none);
-  white-space: nowrap; // prevent links from randomly breaking onto new lines
   background-color: transparent; // For `<button>`s
   border: 0; // For `<button>`s
 
